--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -2149,6 +2149,9 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A5u-dx-fbq">
                                                         <rect key="frame" x="15" y="110.33333333333333" width="354" height="46.333333333333329"/>
                                                         <state key="normal" title="Add/Edit Address"/>
+                                                        <connections>
+                                                            <segue destination="DkG-hC-XE4" kind="presentation" modalPresentationStyle="fullScreen" id="wg2-uU-39g"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <constraints>
@@ -5513,6 +5516,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
+        <segue reference="wg2-uU-39g"/>
         <segue reference="HSB-zT-ihT"/>
         <segue reference="iKO-xp-CV1"/>
         <segue reference="bek-xH-bIt"/>
@@ -5559,8 +5563,8 @@
         <image name="settings_icon_blue" width="50" height="50"/>
         <image name="trash_icon" width="100" height="100"/>
         <image name="update_icon" width="100" height="100"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" width="13" height="13"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
