order page backend connections are made. order page is done.

--- a/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/AddressCard/addresscard.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/AddressCard/addresscard.scss
@@ -4,7 +4,11 @@
   & .address-card-body {
     font-size: small;
     padding: 10px;
+    color: white;
+
     height: 100px;
+    background-color: #41aea9;
+
   }
 
   & .address-card-footer {
