--- a/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/checkout.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/checkout.scss
@@ -20,6 +20,9 @@
   }
 }
 
+.order-alert {
+  margin: auto;
+}
 
 .checkout-container {
   max-width: 70rem;
@@ -31,18 +34,29 @@
   & .order-selection {
     padding-bottom: 25px;
     margin-bottom: 25px;
+    height: 185px;
+    display: flex;
 
     & .address-selection {
       margin: auto;
       align-content: center;
       float: right;
-      display: flex;
+      display: block;
+    }
+    & #credit-card-warning {
+      margin-left: 15px;
+    }
+
+    & .selection-warning {
+      align-content: center;
+      max-height: 50px;
+
     }
 
   }
     
   & #header3 {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
   & .address-cards-block {
 
@@ -51,6 +65,10 @@
     & .address-card-wrapper {
       margin-left: 20px;
       margin-bottom: 20px;
+
+      & :hover {
+        cursor: pointer;;
+      }
       
       & .address-label {
         max-width: 80px;
@@ -60,12 +78,15 @@
       & .edit-label {
         text-align: right;
         display: inline-block;
+        color: black;
       }
 
       & .add-new-address {
         display: inline-flex;
         padding-left: 20px;
         padding-right: 20px;
+        background-color: #41aea9;
+
         
         & .plus-sign {
           margin: auto;
@@ -73,10 +94,6 @@
   
       }
   
-      & :hover {
-        color: rgb(107, 99, 99);
-        cursor: pointer;
-      }
     }
   }
   
@@ -91,20 +108,33 @@
     & .credit-card-wrapper {
       margin-left: 20px;
       margin-bottom: 20px;
+      
+      & :hover {
+        cursor: pointer;
+      }
+
+      & .credit-card-label {
+        min-width: 100px;
+
+        
+      }
 
       & .add-new-credit-card {
         display: inline-flex;
         padding-left: 20px;
         padding-right: 20px;
+        background-color: gray;
+
         
         & .plus-sign {
           margin: auto;
         }
   
       }
-      & :hover {
-        color: rgb(107, 99, 99);
-        cursor: pointer;
+      & .edit-label {
+        text-align: right;
+        display: inline-block;
+
       }
     }
 
@@ -133,6 +163,12 @@
     margin-left: 10px;
     margin-right: 10px;
 
+  }
+  & .edited-card {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 140px;
+    display: inline-flex;
   }
 
 }
