--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableOrderCell" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableOrderCell" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="1000" height="500"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -53,6 +53,9 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" notEnabled="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstItem="uoq-XW-hLg" firstAttribute="top" secondItem="aYh-jl-fIE" secondAttribute="bottom" constant="10" id="1w5-52-5MU"/>
                                     <constraint firstItem="aYh-jl-fIE" firstAttribute="leading" secondItem="Osm-Yi-7Hl" secondAttribute="leading" constant="10" id="5pf-A0-Pmr"/>
@@ -104,9 +107,41 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" pointerInteraction="YES" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o37-yG-uGW">
+                                        <rect key="frame" x="-4" y="182" width="74" height="22"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" button="YES" staticText="YES"/>
+                                        </accessibility>
+                                        <color key="tintColor" systemColor="systemBackgroundColor"/>
+                                        <state key="normal" image="x.circle.fill" catalog="system">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Cancel Order">
+                                                    <attributes>
+                                                        <font key="NSFont" metaFont="system" size="18"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <state key="selected" image="xmark.rectangle.fill" catalog="system">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Cancel Order">
+                                                    <attributes>
+                                                        <font key="NSFont" metaFont="toolTip"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" notEnabled="YES"/>
+                                </accessibility>
                                 <constraints>
+                                    <constraint firstItem="o37-yG-uGW" firstAttribute="top" secondItem="KhF-4T-yEA" secondAttribute="bottom" constant="20" id="4Fj-Hd-pyv"/>
                                     <constraint firstItem="i3A-s4-Xi5" firstAttribute="top" secondItem="dIk-Jf-Wey" secondAttribute="top" constant="20" id="8o6-k1-kUn"/>
                                     <constraint firstItem="i3A-s4-Xi5" firstAttribute="leading" secondItem="dIk-Jf-Wey" secondAttribute="leading" constant="10" id="UcZ-FN-2pk"/>
                                     <constraint firstItem="zMS-LX-1W6" firstAttribute="top" secondItem="HfK-3r-haA" secondAttribute="bottom" constant="20" id="XYa-qo-PQ0"/>
@@ -123,6 +158,9 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" notEnabled="YES"/>
+                        </accessibility>
                         <constraints>
                             <constraint firstItem="Osm-Yi-7Hl" firstAttribute="width" secondItem="mTe-uJ-ZVK" secondAttribute="width" multiplier="0.4" id="0R0-GN-oaF"/>
                             <constraint firstItem="Osm-Yi-7Hl" firstAttribute="leading" secondItem="mTe-uJ-ZVK" secondAttribute="leading" id="Dyh-aO-1Fe"/>
@@ -148,6 +186,7 @@
             <connections>
                 <outlet property="AdressLabel" destination="zMS-LX-1W6" id="Ttw-ja-Chw"/>
                 <outlet property="AmountLabel" destination="HfK-3r-haA" id="tXH-0B-j2z"/>
+                <outlet property="Cancel_OrderButton" destination="o37-yG-uGW" id="Zcl-pj-KEw"/>
                 <outlet property="DatesLabel" destination="KhF-4T-yEA" id="izJ-PK-MAw"/>
                 <outlet property="Name_BrandLabel" destination="uoq-XW-hLg" id="a2X-ix-JP4"/>
                 <outlet property="Price_StatusLabel" destination="UwG-ug-UY2" id="7Th-Ob-Ek6"/>
@@ -158,8 +197,13 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="x.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="xmark.rectangle.fill" catalog="system" width="128" height="93"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
