--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -2179,7 +2179,7 @@
                                                         <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="one-time-code"/>
                                                     </textField>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dTc-ss-scW" userLabel="Vendor Info View">
-                                                        <rect key="frame" x="0.0" y="222.99999999999994" width="374" height="90"/>
+                                                        <rect key="frame" x="0.0" y="222.99999999999994" width="374" height="220"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="irC-FR-Agk">
                                                                 <rect key="frame" x="20" y="10" width="334" height="34"/>
@@ -2198,39 +2198,82 @@
                                                                     </textField>
                                                                 </subviews>
                                                             </stackView>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jse-4x-j3M">
-                                                                <rect key="frame" x="138" y="54" width="98" height="30"/>
-                                                                <state key="normal" title=" Find Address "/>
-                                                                <userDefinedRuntimeAttributes>
-                                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                        <integer key="value" value="10"/>
-                                                                    </userDefinedRuntimeAttribute>
-                                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                                                        <integer key="value" value="2"/>
-                                                                    </userDefinedRuntimeAttribute>
-                                                                </userDefinedRuntimeAttributes>
-                                                                <connections>
-                                                                    <action selector="findCompanyAddressButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="TrR-Ch-eWX"/>
-                                                                </connections>
-                                                            </button>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6g-dl-2rV">
-                                                                <rect key="frame" x="20" y="94" width="334" height="0.0"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="beM-5y-fE1">
+                                                                <rect key="frame" x="20" y="54" width="334" height="80"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Full Address:" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Un-Hy-zKQ">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="100" id="hcA-Qh-VdH"/>
+                                                                        </constraints>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                        <color key="textColor" red="1" green="0.62352941179999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cm7-W4-gvn">
+                                                                        <rect key="frame" x="110" y="0.0" width="224" height="80"/>
+                                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="80" id="83P-Ru-4lE"/>
+                                                                        </constraints>
+                                                                        <color key="textColor" systemColor="labelColor"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" textContentType="location"/>
+                                                                        <dataDetectorType key="dataDetectorTypes" address="YES"/>
+                                                                        <userDefinedRuntimeAttributes>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                                                                <integer key="value" value="1"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                                <integer key="value" value="10"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                        </userDefinedRuntimeAttributes>
+                                                                    </textView>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </stackView>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KoO-9k-Izo">
+                                                                <rect key="frame" x="20" y="144" width="334" height="31.333333333333343"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You also need to determine your address on the map." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DE4-HT-MOY">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="191.66666666666666" height="31.333333333333332"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                        <color key="textColor" red="0.99710637329999996" green="0.63249832390000005" blue="0.01492969599" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jse-4x-j3M">
+                                                                        <rect key="frame" x="201.66666666666663" y="0.0" width="132.33333333333337" height="31.333333333333332"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="132.33000000000001" id="su1-Nq-MZj"/>
+                                                                        </constraints>
+                                                                        <state key="normal" title=" Find Address "/>
+                                                                        <userDefinedRuntimeAttributes>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                                <integer key="value" value="10"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                                                                <integer key="value" value="2"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                        </userDefinedRuntimeAttributes>
+                                                                        <connections>
+                                                                            <action selector="findCompanyAddressButtonPressed:" destination="w39-Ll-aUk" eventType="touchUpInside" id="TrR-Ch-eWX"/>
+                                                                        </connections>
+                                                                    </button>
+                                                                </subviews>
+                                                            </stackView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstItem="jse-4x-j3M" firstAttribute="top" secondItem="irC-FR-Agk" secondAttribute="bottom" constant="10" id="E1n-bf-Go1"/>
+                                                            <constraint firstAttribute="trailing" secondItem="KoO-9k-Izo" secondAttribute="trailing" constant="20" id="ROD-Ij-2M7"/>
+                                                            <constraint firstItem="beM-5y-fE1" firstAttribute="top" secondItem="irC-FR-Agk" secondAttribute="bottom" constant="10" id="YC8-aT-7Ja"/>
                                                             <constraint firstItem="irC-FR-Agk" firstAttribute="top" secondItem="dTc-ss-scW" secondAttribute="top" constant="10" id="Yjs-Gu-9BG"/>
                                                             <constraint firstAttribute="trailing" secondItem="irC-FR-Agk" secondAttribute="trailing" constant="20" id="aFA-bv-5H2"/>
+                                                            <constraint firstAttribute="trailing" secondItem="beM-5y-fE1" secondAttribute="trailing" constant="20" id="b6S-gV-oDB"/>
                                                             <constraint firstItem="irC-FR-Agk" firstAttribute="leading" secondItem="dTc-ss-scW" secondAttribute="leading" constant="20" id="dsA-QV-gp0"/>
-                                                            <constraint firstItem="jse-4x-j3M" firstAttribute="centerX" secondItem="dTc-ss-scW" secondAttribute="centerX" id="fQA-6L-OeC"/>
-                                                            <constraint firstItem="J6g-dl-2rV" firstAttribute="leading" secondItem="dTc-ss-scW" secondAttribute="leading" constant="20" id="oHa-G4-vVO"/>
-                                                            <constraint firstAttribute="trailing" secondItem="J6g-dl-2rV" secondAttribute="trailing" constant="20" id="q7C-qh-VAA"/>
-                                                            <constraint firstAttribute="height" constant="90" id="tCW-A3-ufy"/>
-                                                            <constraint firstItem="J6g-dl-2rV" firstAttribute="top" secondItem="jse-4x-j3M" secondAttribute="bottom" constant="10" id="vAt-c0-TiH"/>
+                                                            <constraint firstItem="KoO-9k-Izo" firstAttribute="top" secondItem="beM-5y-fE1" secondAttribute="bottom" constant="10" id="fru-pX-Ugp"/>
+                                                            <constraint firstItem="beM-5y-fE1" firstAttribute="leading" secondItem="dTc-ss-scW" secondAttribute="leading" constant="20" id="rwd-He-yG5"/>
+                                                            <constraint firstAttribute="height" constant="220" id="tCW-A3-ufy"/>
+                                                            <constraint firstItem="KoO-9k-Izo" firstAttribute="leading" secondItem="dTc-ss-scW" secondAttribute="leading" constant="20" id="xRm-6B-JSF"/>
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By signing up, you agree to our Terms , Data Policy and Cookies Policy ." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VSW-l6-VGK">
@@ -2442,12 +2485,12 @@
                     </view>
                     <navigationItem key="navigationItem" id="izZ-Yx-3wu"/>
                     <connections>
-                        <outlet property="addressLabel" destination="J6g-dl-2rV" id="MYK-gy-6bY"/>
                         <outlet property="addressTextField" destination="K1r-OR-WNK" id="K3B-iC-TSs"/>
                         <outlet property="companyNameTextField" destination="R2n-3V-tyO" id="Z7f-VY-XoA"/>
                         <outlet property="emailTextField" destination="0XM-DC-Wp1" id="7Ui-AO-PN9"/>
                         <outlet property="firstNameTextField" destination="iZB-bB-f48" id="Raj-ZI-HZ9"/>
                         <outlet property="frameView" destination="pus-pD-cSQ" id="31I-hC-X8Z"/>
+                        <outlet property="fullAddressTextView" destination="Cm7-W4-gvn" id="it5-Ir-r9o"/>
                         <outlet property="isCustomerButton" destination="8Xv-IK-imB" id="Ldp-Dv-1vD"/>
                         <outlet property="isVendorButton" destination="Dpb-Nw-seZ" id="Elc-Al-B1K"/>
                         <outlet property="lastNameTextField" destination="Aus-0v-s5f" id="ksL-3t-hzg"/>
@@ -5774,7 +5817,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="F5l-V4-YaC"/>
+        <segue reference="4Ek-xd-hSS"/>
         <segue reference="bek-xH-bIt"/>
         <segue reference="NHr-zy-FFi"/>
         <segue reference="ybP-Ln-r90"/>
@@ -5819,8 +5862,8 @@
         <image name="settings_icon_blue" width="50" height="50"/>
         <image name="trash_icon" width="100" height="100"/>
         <image name="update_icon" width="100" height="100"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" width="13" height="13"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
