--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
@@ -50,6 +50,8 @@
       border: 1px solid rgba(0, 0, 0, 0.2);
       border-radius: 12px;
       width: 162px;
+      color: black;
+      height: 4rem;
       & img {
         width: 40px;
       }
